# pyslang-stubs

./: README.md  allowlist.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyslang-stubs/: __init__.pyi
stubs/pybind11_builtins/: __init__.pyi
tests/: test_typing.py
