[project]
name = "pyslang-stubs"
version = "9.0.0"
description = "Typing stubs for the excellent pyslang library"
readme = "README.md"
authors = [
    { name = "allRisc", email = "allrisc.dev@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "Classifier: Programming Language :: Python :: 3",
    "Classifier: Typing :: Stubs Only"
]

requires-python = ">=3.13"
dependencies = [
    "pybind11>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/allRisc/py_pretty_logger"
Documentation = "https://github.com/allRisc/py_pretty_logger/blob/main/README.md"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
    "mypy>=1.4.1",
    "pyslang==9.0.0",
    "pybind11-stubgen>=2.5.5",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
